# SemilleroCavernasGCPA

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: pipeline.yaml  viviano2014.yaml
docs/: 01_conceptos.md  02_instalacion.md  03_descarga.md  04_pipeline_procesamiento.md  05_mapas_minerales.md  06_deteccion_minerales.md  07_clasificacion_unidades.md  08_manual_gui.md
examples/: product_ids.example.txt  training_pixels.example.csv
src/crism_pipeline/: __init__.py  classification.py  cli.py  config.py  detection.py  download.py  gui.py  io_if.py  io_sr.py  maps.py  stretch.py
