[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crism-pipeline"
version = "0.1.0"
description = "Pipeline Python para CRISM MTRDR SR (índices Viviano 2014)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "spectral>=0.23",
  "rasterio>=1.3",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "tqdm>=4.65",
  "h5py>=3.9",
  "pandas>=2.0",
  "customtkinter>=5.2",
  "pillow>=10.0",
  "markdown>=3.5",
  "tkinterweb>=3.0",
]

[project.scripts]
crism-pipeline = "crism_pipeline.cli:main"
crism-pipeline-gui = "crism_pipeline.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crism_pipeline = ["assets/*"]
